# testAppliction

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/assets/: app.js
app/src/androidTest/java/com/horoftech/testappliction/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/horoftech/testappliction/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/horoftech/testappliction/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
